--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,6 @@
+@import url('./src/scss/fonts.css');
 @import url('./src/scss/base.scss');
+@import url('./src/scss/utilities.scss');
 @import url('./src/scss/menu-bar.scss');
 @import url('./src/scss/header.scss');
+@import url('./src/scss/actions.scss');
