--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,10 +1,9 @@
 .header {
   background: var(--primary-white);
   border-radius: calc(var(--border-radius) * 3);
-  border: 1px solid;
   height: 3rem;
   left: 50%;
-  max-width: var(--app-max-width);
+  max-width: calc(var(--app-max-width) - 16px);
   top: 8px;
   transform: translateX(-50%);
   width: calc(100% - 16px);
