--- a/src/scss/menu-bar.scss
+++ b/src/scss/menu-bar.scss
@@ -1,28 +1,30 @@
-.menu-bar-list {
-  > li {
-    opacity: 0;
-    transform: translateY(20px);
-    animation: slideToPosition 0.5s forwards;
-
-    &:nth-child(1) {
-      animation-delay: 0.1s;
-    }
-
-    &:nth-child(2) {
-      animation-delay: 0.2s;
-    }
-
-    &:nth-child(4) {
-      animation-delay: 0.4s;
-    }
-
-    &:nth-child(5) {
-      animation-delay: 0.5s;
-    }
+@keyframes slideToPosition {
+  to {
+    opacity: 1;
+    transform: translateY(0);
   }
+}
 
-  > li:nth-child(3) {
-    animation: slideAbovePosition .5s forwards;
-    animation-delay: 0.3s;
+@keyframes slideAbovePosition {
+  to {
+    opacity: 1;
+    transform: translateY(-12px);
+  }
+}
+
+.menu-bar-list {
+  @for $i from 1 through 5 {
+    li:nth-child(#{$i}) {
+      opacity: 0;
+      transform: translateY(20px);
+      animation: slideToPosition .35s forwards;
+
+      @if $i == 3 {
+        animation: slideAbovePosition .35s forwards;
+        animation-delay: #{0.1 * $i}s;
+      } @else {
+        animation-delay: #{0.1 * $i}s;
+      }
+    }
   }
 }
