--- a/src/scss/utilities.scss
+++ b/src/scss/utilities.scss
@@ -3,6 +3,11 @@
     font-family: 'GeneralSans-Medium';
     font-weight: 500;
   }
+
+  &-semibold {
+    font-family: 'GeneralSans-Semibold';
+    font-weight: 600;
+  }
 }
 
 .text {
