--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,8 @@
-@import url('./src/scss/fonts.css');
+@import url('./src/scss/fonts.scss');
 @import url('./src/scss/base.scss');
 @import url('./src/scss/utilities.scss');
 @import url('./src/scss/menu-bar.scss');
 @import url('./src/scss/header.scss');
 @import url('./src/scss/actions.scss');
+@import url('./src/scss/main.scss');
+@import url('./src/scss/tabs.scss');
