--- a/src/scss/badge.scss
+++ b/src/scss/badge.scss
@@ -3,7 +3,9 @@
   border-radius: calc(var(--border-radius) / 2);
   color: var(--text-primary);
   display: inline-flex;
+  font-family: 'GeneralSans-Regular';
   font-size: 0.625rem;
+  font-weight: 400;
   justify-content: center;
 
   &-announcement {
