--- a/style.scss
+++ b/style.scss
@@ -8,3 +8,4 @@
 @import url('./src/scss/main.scss');
 @import url('./src/scss/tabs.scss');
 @import url('./src/scss/activity-list.scss');
+@import url('./src/scss/vibe-meter.scss');
