--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -9,12 +9,14 @@
   --bg-light-red: rgba(240, 85, 132, 0.1);
   --bg-light-yellow: #FFF3C8;
   --bg-light: #F6F6F6;
+  --bg-lighter-pink: #FEEEF3;
   --border-light: #ebebed;
   --border-radius-lg: 40px;
   --border-radius: 16px;
   --border: #DEE4E9;
   --font-size: 16px;
   --primary-white: #FFFFFF;
+  --text-disabled: #E0E0E0;
   --text-error: #D71D1D;
   --text-light: #6E757B;
   --text-primary: #3A3C44;
