--- a/style.scss
+++ b/style.scss
@@ -9,3 +9,4 @@
 @import url('./src/scss/tabs.scss');
 @import url('./src/scss/activity-list.scss');
 @import url('./src/scss/vibe-meter.scss');
+@import url('./src/scss/timeline.scss');
