--- a/src/scss/activity-list.scss
+++ b/src/scss/activity-list.scss
@@ -4,4 +4,15 @@
   &-tags {
     gap: .75rem
   }
+
+  &-list-item {
+    @for $i from 1 through 100 {
+      &:nth-child(#{$i}) {
+        opacity: 0;
+        transform: translateY(4rem);
+        animation: slideToPosition .75s forwards;
+        animation-delay: #{0.1 * $i}s;
+      }
+    }
+  }
 }
