Today indicator design

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -10,6 +10,7 @@
   --bg-light-yellow: #FFF3C8;
   --bg-light: #F6F6F6;
   --bg-lighter-pink: #FEEEF3;
+  --black: #000000;
   --border-light: #ebebed;
   --border-radius-lg: 40px;
   --border-radius: 16px;
