--- a/src/scss/timeline.scss
+++ b/src/scss/timeline.scss
@@ -22,6 +22,7 @@
   &-list-items {
     -ms-overflow-style: none;
     gap: 1rem;
+    padding-top: 2rem;
     scrollbar-width: none;
   }
 
@@ -51,5 +52,26 @@
 
   &-list-item-indicator {
     background: var(--bg-lighter-pink);
+  }
+}
+
+.today-indicator {
+  background: var(--primary-white);
+  border-radius: var(--border-radius-lg);
+  border: 1px solid var(--black);
+  color: var(--black);
+  top: -2rem;
+  right: .5rem;
+
+  &:before {
+    background: var(--black);
+    bottom: -70px;
+    content: '';
+    height: 70px;
+    left: 50%;
+    position: absolute;
+    transform: translateX(-50%);
+    width: 1px;
+    z-index: 1;
   }
 }
